--- a/Listas/Desafios2_2021/fast-flow/.vscode/settings.json
+++ b/Listas/Desafios2_2021/fast-flow/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "vector": "cpp",
-        "unordered_map": "cpp"
+        "unordered_map": "cpp",
+        "*.tcc": "cpp",
+        "string": "cpp",
+        "unordered_set": "cpp",
+        "string_view": "cpp"
     }
 }
