--- a/Listas/Desafios2_2021/fast-flow/.vscode/settings.json
+++ b/Listas/Desafios2_2021/fast-flow/.vscode/settings.json
@@ -5,6 +5,7 @@
         "*.tcc": "cpp",
         "string": "cpp",
         "unordered_set": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "ostream": "cpp"
     }
 }
